Prevent wrapping when many tags are present (#21)

--- a/public/css/hanzi-graph.css
+++ b/public/css/hanzi-graph.css
@@ -440,6 +440,7 @@ h2.word-header {
 
 .tags {
     margin-top: 8px;
+    line-height: 26px;
 }
 
 .tag {
